cluster/k8s/seaweedfs/drivefs-artifacts-s3/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: drivefs-artifacts-s3
  namespace: seaweedfs
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
  hostnames:
    - "drivefs-s3.allegedly.works"
  rules:
    - timeouts:
        request: "3600s"
        backendRequest: "3600s"
      backendRefs:
        - name: drivefs-artifacts-s3
          port: 8333
